adjusted minor layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ nav a {
     width: 500px; 
     height: 300px; 
 }
+
 .title-box {
     width: 500px; 
     height: 300px; 
@@ -62,7 +63,8 @@ nav a {
 }
 .cats-text { 
     margin: 30px; 
-    margin-bottom: 0; 
+    margin-bottom: 0;
+    font-size: 21px;  
 }
 .product-section { 
     padding-top: 30px; 
@@ -71,6 +73,7 @@ nav a {
     font-family: Arial, Helvetica, sans-serif; 
     font-weight: 500; 
     margin: 0 auto; 
+    font-size: 21px; 
 }
 .product-title { 
     margin-left: 30px; 
@@ -93,6 +96,7 @@ nav a {
     font-family: Arial, Helvetica, sans-serif; 
     width: 1000px; 
     margin: 0 auto; 
+    padding-bottom: 40px; 
 }
 .final-list { 
     list-style: none; 
@@ -110,9 +114,12 @@ nav a {
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 24px; 
 }
-.final-p { 
-    padding: 30px; 
+.final-p p { 
+    padding: 0 30px;
+    margin-top: 5px; 
+    font-size: 21px;  
 }
+
 footer {  
     background: rgb(79, 199, 147); 
     height: 80px;
